Create Students Components Closes #11

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,6 @@
 <app-header></app-header>
-<app-register></app-register>
+<div class="container">
+  <app-students></app-students>
+</div>
+
 <app-footer></app-footer>
