Create Component Action Closes #12

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,7 @@
 <app-header></app-header>
 <div class="container">
-  <app-students></app-students>
+<!--  <app-action></app-action>-->
+  <app-register></app-register>
 </div>
 
 <app-footer></app-footer>
