--- a/frontend/src/app/components/students/students.component.css
+++ b/frontend/src/app/components/students/students.component.css
@@ -1,3 +1,10 @@
 .table {
   margin-top: 100px;
 }
+.btn-success {
+  margin-right: 5px;
+}
+.btn-primary {
+  font-size: 20px;
+  margin: 15px 0;
+}
