--- a/frontend/src/app/components/students/students.component.html
+++ b/frontend/src/app/components/students/students.component.html
@@ -8,6 +8,7 @@
     <th scope="col">Gender</th>
     <th scope="col">Age</th>
     <th scope="col">Address</th>
+    <th scope="col">Action</th>
 
   </tr>
   </thead>
@@ -19,6 +20,11 @@
     <td>MALE</td>
     <td>20</td>
     <td>Shibeen</td>
+    <td>
+      <button class="btn btn-success">Update</button>
+      <button class="btn btn-danger">Delete</button>
+    </td>
   </tr>
   </tbody>
 </table>
+<button class="btn btn-primary">Add</button>
