--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,7 +1,8 @@
 <app-header></app-header>
 <div class="container">
 <!--  <app-action></app-action>-->
-  <app-register></app-register>
+<!--  <app-register></app-register>-->
+  <router-outlet></router-outlet>
 </div>
 
 <app-footer></app-footer>
