--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,13 +1,13 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Student</a>
+    <a class="navbar-brand" href="http://www.google.com">Student</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" routerLink="students">Home</a>
         </li>
 
       </ul>
@@ -16,7 +16,7 @@
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
       <div class="control">
-        <button class="btn btn-outline-success" type="submit">Login</button>
+        <button class="btn btn-outline-success" routerLink="register" type="submit">Login</button>
         <button class="btn btn-outline-danger" type="submit">Logout</button>
       </div>
     </div>
