--- a/frontend/src/app/components/students/students.component.html
+++ b/frontend/src/app/components/students/students.component.html
@@ -21,7 +21,7 @@
     <td>20</td>
     <td>Shibeen</td>
     <td>
-      <button class="btn btn-success">Update</button>
+      <button class="btn btn-success" routerLink="/control">Update</button>
       <button class="btn btn-danger">Delete</button>
     </td>
   </tr>
