--- a/frontend/src/app/components/students/students.component.html
+++ b/frontend/src/app/components/students/students.component.html
@@ -15,6 +15,7 @@
   <tbody>
   <tr *ngFor="let temStudent of students">
 <!--    <th scope="row">1</th>-->
+<!--    <td>{{ temStudent.id}}</td>-->
     <td>{{ temStudent.fullName }}</td>
     <td>{{ temStudent.phone }}</td>
     <td>{{temStudent.gender }}</td>
