--- a/frontend/src/app/components/register/register.component.html
+++ b/frontend/src/app/components/register/register.component.html
@@ -1,15 +1,21 @@
-<div class="input-group flex-nowrap ipu">
-  <div class="input-group-prepend">
-  </div>
-  <input  type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="addon-wrapping">
-</div>
+<form [formGroup]="loginFormGroup" (ngSubmit)="onSubmit()">
 
-<div class="input-group flex-nowrap ipu">
-  <div class="input-group-prepend">
-  </div>
-  <input type="password" class="form-control" placeholder="Password" aria-label="Password" aria-describedby="addon-wrapping">
-</div>
+  <div formGroupName="admin">
+    <div class="input-group flex-nowrap ipu">
+      <div class="input-group-prepend">
+      </div>
+      <input  formControlName="userName" type="text" class="form-control"
+              placeholder="Username" aria-label="Username" aria-describedby="addon-wrapping">
+    </div>
 
-<div>
-  <button class="btn btn-primary"> Log In</button>
-</div>
+    <div class="input-group flex-nowrap ipu">
+      <div class="input-group-prepend">
+      </div>
+      <input formControlName="password" type="password" class="form-control" placeholder="Password" aria-label="Password" aria-describedby="addon-wrapping">
+    </div>
+  </div>
+
+  <div>
+    <button class="btn btn-primary"> Log In</button>
+  </div>
+</form>
