Handle Student Service Closes #33

--- a/frontend/src/app/components/action/action.component.html
+++ b/frontend/src/app/components/action/action.component.html
@@ -1,7 +1,7 @@
 <div class="input-group flex-nowrap ipu">
   <div class="input-group-prepend">
   </div>
-  <input  type="text" class="form-control" placeholder="Full NAme" aria-label="Username" aria-describedby="addon-wrapping">
+  <input  type="text" class="form-control" placeholder="Full Name" aria-label="Username" aria-describedby="addon-wrapping">
 </div>
 
 <div class="input-group flex-nowrap ipu">
