--- a/frontend/src/app/components/action/action.component.html
+++ b/frontend/src/app/components/action/action.component.html
@@ -1,27 +1,42 @@
-<div class="input-group flex-nowrap ipu">
-  <div class="input-group-prepend">
-  </div>
-  <input  type="text" class="form-control" placeholder="Full Name" aria-label="Username" aria-describedby="addon-wrapping">
-</div>
+<form [formGroup]="studentGroup" (ngSubmit)="save()">
+  <div formGroupName="student">
+    <div class="input-group flex-nowrap ipu">
+      <div class="input-group-prepend">
+      </div>
+      <input formControlName="fullName"  type="text" class="form-control" placeholder="Full Name"
+              aria-label="Username" aria-describedby="addon-wrapping">
+    </div>
 
-<div class="input-group flex-nowrap ipu">
-  <div class="input-group-prepend">
-  </div>
-  <input type="text" class="form-control" placeholder="Age" aria-label="Password" aria-describedby="addon-wrapping">
-</div>
+    <div class="input-group flex-nowrap ipu">
+      <div class="input-group-prepend">
+      </div>
+      <input formControlName="age" type="text" class="form-control" placeholder="Age"
+             aria-label="Password" aria-describedby="addon-wrapping">
+    </div>
 
-<div class="input-group flex-nowrap ipu">
-  <div class="input-group-prepend">
-  </div>
-  <input type="text" class="form-control" placeholder="Address" aria-label="Password" aria-describedby="addon-wrapping">
-</div>
+    <div class="input-group flex-nowrap ipu">
+      <div class="input-group-prepend">
+      </div>
+      <input formControlName="address" type="text" class="form-control" placeholder="Address"
+             aria-label="Password" aria-describedby="addon-wrapping">
+    </div>
 
-<div class="input-group flex-nowrap ipu">
-  <div class="input-group-prepend">
-  </div>
-  <input type="text" class="form-control" placeholder="Age" aria-label="Gender" aria-describedby="addon-wrapping">
-</div>
+    <div class="input-group flex-nowrap ipu">
+      <div class="input-group-prepend">
+      </div>
+      <input formControlName="phone" type="text" class="form-control" placeholder="Phone"
+             aria-label="Gender" aria-describedby="addon-wrapping">
+    </div>
 
-<div>
-  <button class="btn btn-primary"> Log In</button>
-</div>
+
+    <select formControlName="gender" class="form-select" aria-label="Default select example">
+      <option value="MALE">MALE</option>
+      <option value="FEMALE">FEMALE</option>
+    </select>
+  </div>
+
+
+  <div>
+    <button class="btn btn-primary">Save</button>
+  </div>
+</form>
