Get Data form Closes #37

--- a/frontend/src/app/components/students/students.component.html
+++ b/frontend/src/app/components/students/students.component.html
@@ -28,4 +28,4 @@
   </tr>
   </tbody>
 </table>
-<button class="btn btn-primary">Add</button>
+<button routerLink="/control" class="btn btn-primary">Add</button>
