--- a/frontend/src/app/components/register/register.component.html
+++ b/frontend/src/app/components/register/register.component.html
@@ -7,12 +7,20 @@
       </div>
       <input  formControlName="userName" type="text" class="form-control"
               placeholder="Username" aria-label="Username" aria-describedby="addon-wrapping">
+      <div *ngIf="userName.invalid && (userName.touched || userName.dirty)">
+        <div *ngIf="userName.errors.required" class="alert alert-danger">User Name Is Required</div>
+        <div *ngIf="userName.errors.minlength" class="alert alert-danger">User Name Must Be At Least 5 Digits</div>
+      </div>
     </div>
 
     <div class="input-group flex-nowrap ipu">
       <div class="input-group-prepend">
       </div>
       <input formControlName="password" type="password" class="form-control" placeholder="Password" aria-label="Password" aria-describedby="addon-wrapping">
+      <div *ngIf="password.invalid && (password.touched || password.dirty)">
+        <div *ngIf="password.errors.required" class="alert alert-danger">Password Is required</div>
+        <div *ngIf="password.errors.minlength" class="alert alert-danger">Password Must Be At Least 5 Digits</div>
+      </div>
     </div>
   </div>
 
