--- a/frontend/src/app/components/action/action.component.html
+++ b/frontend/src/app/components/action/action.component.html
@@ -1,5 +1,6 @@
 <form [formGroup]="studentGroup" (ngSubmit)="save()">
   <div formGroupName="student">
+    <div *ngIf="invalidFullName" class="alert alert-danger">{{ invalidFullName }}</div>
     <div class="input-group flex-nowrap ipu">
       <div class="input-group-prepend">
       </div>
