--- a/frontend/src/app/components/students/students.component.html
+++ b/frontend/src/app/components/students/students.component.html
@@ -12,7 +12,7 @@
 
   </tr>
   </thead>
-  <tbody>
+  <tbody *ngIf="students.length !=0">
   <tr *ngFor="let temStudent of students">
 <!--    <th scope="row">1</th>-->
 <!--    <td>{{ temStudent.id}}</td>-->
@@ -28,4 +28,7 @@
   </tr>
   </tbody>
 </table>
+<diV  *ngIf="students?.length ==0" class="alert alert-danger">
+  No Data
+</diV>
 <button routerLink="/control" class="btn btn-primary">Add</button>
