--- a/frontend/src/app/components/students/students.component.html
+++ b/frontend/src/app/components/students/students.component.html
@@ -28,6 +28,18 @@
   </tr>
   </tbody>
 </table>
+<div class="col-md-8">
+  <div class="row">
+    <div class="col-mf-9" style="padding-left: 30%;">
+      <ngb-pagination [(page)]="page"
+                        [pageSize]="size"
+                        [collectionSize]="numElements"
+                        (pageChange)="change()">
+
+      </ngb-pagination>
+    </div>
+  </div>
+</div>
 <diV  *ngIf="students?.length == 0" class="alert alert-danger">
   No Data
 </diV>
